--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 <body>
 
 <h1>Ueber Mich</h1>
+<p>
+  <nav>
+  <a href="/html/">HTML</a> |
+  <a href="/css/">CSS</a> |
+  <a href="/js/">JavaScript</a> |
+  <a href="/jquery/">jQuery</a>
+ </nav>
+ </p>
+ 
+ 
+
+<p><strong>Note:</strong> The nav tag is not supported in Internet Explorer 8 and earlier versions.</p>
+
+</body>
+</html>
+ 
+ 
 
 <h2><i>Allgemeines</i></h2>
 <p>
