--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head><link type="text/css" rel="stylesheet" href="style.css" /></head>
+
 <body>
-<link type="text/css" rel="stylesheet" href="style.css" />
+
 <h1>Ueber Mich</h1>
 <p id="p01">
   <nav>
